# FRIDAY

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
friday/: __init__.py  briefing.py  cli.py  main.py  mcp_server.py
friday/core/: config.py  llm.py  memory.py  orchestrator.py
friday/integrations/: google_auth.py  zoom_auth.py
friday/skills/: __init__.py  gcalendar.py  gmail.py  meetings.py  obsidian.py  reports.py
obsidian_copilot/: __init__.py  briefing.py  cli.py  main.py  mcp_server.py
obsidian_copilot/core/: config.py  llm.py  memory.py  orchestrator.py
obsidian_copilot/integrations/: google_auth.py  zoom_auth.py
obsidian_copilot/skills/: __init__.py  base.py  gcalendar.py  gmail.py  meetings.py  obsidian.py  reports.py
tests/: conftest.py  test_obsidian.py  test_skills.py
